# intro-to-ml-2021

./: .gitignore  README.md  mypy.ini  pyproject.toml  pyrightconfig.json
intro_to_ml_2021/asg_1/: question_1.py  question_2.py  question_3.py  runner.py
intro_to_ml_2021/asg_2/: hw2q1.py  question_1.py  question_2.py  runner.py
intro_to_ml_2021/asg_3/: generateMultiringDataset.py  question_1.py  question_2.py  runner.py
intro_to_ml_2021/asg_4/: flycheck_question_2.py  quesiton_1.py  question_1.py  question_2.py  runner.py
tests/: labels.txt  test_assignment_1.py  test_assignment_2.py  test_assignment_3.py
