[tool.poetry]
name = "intro_to_ml_2021"
version = "0.1.0"
description = "Homework and practice problem solutions for Introduction to Machine Learning at Northeastern University"
authors = ["Griffin Knipe <knipegp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.0"
scipy = "^1.6.0"
seaborn = "^0.11.1"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pylint = "^2.6.2"
mypy = "^0.800"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
